--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hover": "^3.0.1",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
