--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-hover": "^3.0.1",
     "react-router-dom": "^6.18.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0"
   },
